<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security"
        app:icon="@drawable/security_icon">

        <SwitchPreferenceCompat
            app:key="fingerprint"
            app:title="@string/fingerPrint_login" />

        <SwitchPreferenceCompat
            app:dependency="fingerprint"
            app:key="locked"
            app:summaryOff="@string/fingerprint_failure_not_lock"
            app:summaryOn="@string/fingerprint_falure_locked"
            app:title="验证失败锁定" />

    </PreferenceCategory>


</PreferenceScreen>