<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:ignore="NamespaceTypo">

    <View
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#000000"
        android:alpha="0"
        android:id="@+id/fragmentregisterView1"/>

    <ImageView
        app:layout_heightPercent="50%"
        app:layout_widthPercent="50%"
        android:layout_centerHorizontal="true"
        android:src="@drawable/register_logo"
        android:id="@+id/fragmentregisterLogo"
        android:alpha="0"/>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_marginTopPercent="40%"
        android:id="@+id/form_register"
        android:padding="30dp"
        android:alpha="0">

        <ImageView
            android:layout_height="@dimen/login_holder_height"
            android:layout_width="@dimen/login_holder_height"
            android:tint="#ffffff"
            android:src="@drawable/user_icon"
            android:id="@+id/mainImageView1"
            android:layout_marginBottom="30dp"/>

        <ImageView
            android:layout_height="@dimen/login_holder_height"
            android:layout_width="@dimen/login_holder_height"
            android:layout_marginTop="20dp"
            android:tint="#ffffff"
            android:src="@drawable/password_icon"
            android:layout_below="@id/mainImageView1"
            android:id="@+id/mainImageView2"
            android:layout_marginBottom="30dp"/>
        <ImageView
            android:layout_height="@dimen/login_holder_height"
            android:layout_width="@dimen/login_holder_height"
            android:layout_marginTop="20dp"
            android:tint="#ffffff"
            android:src="@drawable/key_icon"
            android:layout_below="@id/mainImageView2"
            android:id="@+id/mainImageView3"/>

        <EditText
            android:id="@+id/username_register"
            android:inputType="text"
            android:layout_width="match_parent"
            android:ems="10"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/mainImageView1"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:textSize="16sp"
            android:layout_alignTop="@id/mainImageView1"
            android:layout_alignBottom="@id/mainImageView1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/enter_user_name" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_below="@id/username_register"
            android:background="#FFFFFF"
            android:layout_marginTop="@dimen/login_horizontalline_spacing"/>

        <EditText
            android:id="@+id/pass_register"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/mainImageView2"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:textSize="16sp"
            android:layout_alignTop="@id/mainImageView2"
            android:layout_alignBottom="@id/mainImageView2"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/enter_pass" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_below="@id/pass_register"
            android:background="#FFFFFF"
            android:layout_marginTop="@dimen/login_horizontalline_spacing"/>
        <EditText
            android:id="@+id/key"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/mainImageView3"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:textSize="16sp"
            android:layout_alignTop="@id/mainImageView3"
            android:layout_alignBottom="@id/mainImageView3"
            android:textColor="#FFFFFF"
            android:hint="@string/enter_key"
            android:textColorHint="#FF4133"/>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_below="@id/key"
            android:background="#FFFFFF"
            android:layout_marginTop="@dimen/login_horizontalline_spacing"/>

    </RelativeLayout>


</androidx.percentlayout.widget.PercentRelativeLayout>

